
* The predicates and functions in int.m, float, math.m and array.m now 
  generate exceptions rather than program aborts on domain errors and
  out-of-bounds array accesses.

* We've removed the buggy reverse modes of the arithmetic functions in
  float.m and extras/complex_numbers (because of rounding errors the
  functions aren't actually reversible).
 
* The exception module has a new predicate `try_store', which is
  like `try_io', but which works with stores rather than io__states.

* We've fixed a bug in time.m. Type `tm' didn't store the day of the month,
  which meant that the functions which required that field (e.g. time__asctime,
  time__mktime) did not work.

  The order of the fields of type `time__tm' has been changed so that
  comparison of values of type `tm' whose `tm_dst' fields are identical
  is equivalent to comparison of the times those values represent.

* We've added a predicate to io.m to return the last modification time
  of a file (io__file_modification_time).

* We've added a predicate `std_util__map_maybe/3' and a function
  `std_util__map_maybe/2' to apply a predicate or a function to
  a value stored in a term of type `std_util__maybe'.

* We've added a predicate version of `set__fold'.

* We've added some functions to the term_io module to return printable
  representations of term components as strings.

* We've made the outputs of the string concatenation primitives unique.

* We've removed the long obsolete `int__builtin_*' and
  `float__builtin_float_*' predicates, which were synonyms
  for the arithmetic functions dating from when Mercury didn't
  have functions.

Changes to the Mercury implementation:
  
* The Mercury compiler can now perform smart recompilation, enabled by the
  `--smart-recompilation' option. With smart recompilation, when the
  interface of a module changes, only modules which use the changed
  declarations are recompiled. Smart recompilation does not yet work
  with `--intermodule-optimization'.
