@@ -252,7 +252,6 @@
 
 :- pred string__set_char(char, int, string, string).
 :- mode string__set_char(in, in, in, out) is semidet.
-:- mode string__set_char(in, in, di, uo) is semidet.
 %	string__set_char(Char, Index, String0, String):
 %	`String' is `String0' with the (`Index' + 1)-th character
 %	set to `Char'.
@@ -262,7 +261,6 @@
 :- func string__set_char_det(char, int, string) = string.
 :- pred string__set_char_det(char, int, string, string).
 :- mode string__set_char_det(in, in, in, out) is det.
-:- mode string__set_char_det(in, in, di, uo) is det.
 %	string__set_char_det(Char, Index, String0, String):
 %	`String' is `String0' with the (`Index' + 1)-th character
 %	set to `Char'.
@@ -271,10 +269,8 @@
 
 :- func string__unsafe_set_char(char, int, string) = string.
 :- mode string__unsafe_set_char(in, in, in) = out is det.
-:- mode string__unsafe_set_char(in, in, di) = uo is det.
 :- pred string__unsafe_set_char(char, int, string, string).
 :- mode string__unsafe_set_char(in, in, in, out) is det.
-:- mode string__unsafe_set_char(in, in, di, uo) is det.
 %	string__unsafe_set_char(Char, Index, String0, String):
 %	`String' is `String0' with the (`Index' + 1)-th character
 %	set to `Char'.
@@ -1897,35 +1893,6 @@ make_format_dotnet(_Flags, MaybeWidth, MaybePrec, _LengthMod, Spec0) = String :-
 	}
 ").
 
-/*
-:- pred string__set_char(char, int, string, string).
-:- mode string__set_char(in, in, di, uo) is semidet.
-*/
-:- pragma foreign_proc("C",
-	string__set_char(Ch::in, Index::in, Str0::di, Str::uo),
-		[will_not_call_mercury, thread_safe], "
-	if ((MR_Unsigned) Index >= strlen(Str0)) {
-		SUCCESS_INDICATOR = FALSE;
-	} else {
-		SUCCESS_INDICATOR = TRUE;
-		Str = Str0;
-		MR_set_char(Str, Index, Ch);
-	}
-").
-
-:- pragma foreign_proc("MC++",
-	string__set_char(Ch::in, Index::in, Str0::di, Str::uo),
-		[will_not_call_mercury, thread_safe], "
-	if (Index >= Str0->get_Length()) {
-		SUCCESS_INDICATOR = FALSE;
-	} else {
-		Str = System::String::Concat(Str0->Substring(0, Index),
-			System::Convert::ToString(Ch), 
-			Str0->Substring(Index + 1));
-		SUCCESS_INDICATOR = TRUE;
-	}
-").
-
 /*-----------------------------------------------------------------------*/
 
 /*
@@ -1942,24 +1909,6 @@ make_format_dotnet(_Flags, MaybeWidth, MaybePrec, _LengthMod, Spec0) = String :-
 ").
 :- pragma foreign_proc("MC++",
 	string__unsafe_set_char(Ch::in, Index::in, Str0::in, Str::out),
-		[will_not_call_mercury, thread_safe], "
-	Str = System::String::Concat(Str0->Substring(0, Index),
-		System::Convert::ToString(Ch), 
-		Str0->Substring(Index + 1));
-").
-
-/*
-:- pred string__unsafe_set_char(char, int, string, string).
-:- mode string__unsafe_set_char(in, in, di, uo) is det.
-*/
-:- pragma foreign_proc("C",
-	string__unsafe_set_char(Ch::in, Index::in, Str0::di, Str::uo),
-		[will_not_call_mercury, thread_safe], "
-	Str = Str0;
-	MR_set_char(Str, Index, Ch);
-").
-:- pragma foreign_proc("MC++",
-	string__unsafe_set_char(Ch::in, Index::in, Str0::di, Str::uo),
 		[will_not_call_mercury, thread_safe], "
 	Str = System::String::Concat(Str0->Substring(0, Index),
 		System::Convert::ToString(Ch), 
